<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_guests">Todos Convidados</string>
    <string name="menu_presents">Convidados Presentes</string>
    <string name="menu_absents">Convidados Ausentes</string>
    <string name="txt_name">Nome</string>
    <string name="txt_present">Presença</string>
    <string name="radio_btn_present">Presente</string>
    <string name="radio_btn_absent">Ausente</string>
    <string name="btn_save">Salvar</string>
</resources>